--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev": "nodemon server.js",
     "start:prod": "set NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js",
-    "watch:js": "parcel build ./public/js/index.js --dist-dir ./public/js/bundled",
-    "build:js": "parcel watch ./public/js/index.js --dist-dir ./public/js/bundled"
+    "watch:js": "npx parcel build ./public/js/index.js --dist-dir ./public/js/bundled",
+    "build:js": "npx parcel watch ./public/js/index.js --dist-dir ./public/js/bundled"
   },
   "author": "Mohamed Samir",
   "license": "ISC",
